kube/web_app/vue.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-app-deployment
  namespace: default
  labels:
    app: vue-app
spec:
  selector:
    matchLabels:
      app: vue-app
  template:
    metadata:
      labels:
        app: vue-app
    spec:
      containers:
        - name: vue-app
          image: teorxiro/web_app:latest
          ports:
            - containerPort: 5173
