kube/web_app/vue.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vue-app-service
spec:
  type: ClusterIP
  selector:
    app: vue-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
